deploy/lab-k8s-terraform/k8s/profiles/guardrails/81-namespace-pod-security.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tarinio-lab
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
