deploy/lab-k8s-terraform/k8s/profiles/guardrails/82-deploy-security-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-plane
spec:
  template:
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: control-plane
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  template:
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ui
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runtime
spec:
  template:
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: runtime
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
